browser/base/content/browser-verticaltabs.css
/*
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at http://mozilla.org/MPL/2.0/.
 */

.toolbar-items {
  height: 100%;
}

#navigator-toolbox-background[verticaltabs='true'] #titlebar {
  display: none;
}

#TabsToolbar {
  background-color: -moz-Dialog;
  max-width: 350px;
  transition :min-width 150ms ease-in-out, max-width 150ms ease-in-out;
  overflow: hidden;
}

#TabsToolbar:-moz-lwtheme {
  background-image: var(--lwt-additional-images);
  background-repeat: no-repeat, no-repeat, no-repeat;
  background-position: center;
  background-size: cover;

  background-color: var(--lwt-accent-color-inactive, var(--lwt-accent-color));
}

.tabbrowser-tab {
  max-width: unset;
  width: 100%;
  min-height: unset;
  height: var(--tab-min-height);
  max-height: var(--tab-min-height);
  transition: min-height 100ms ease-in-out, max-height 100ms ease-in-out;
}

.tab-background {
  height: 35px
}

.tab-content {
  padding: 0 var(--inline-tab-padding) !important;
}

.tab-throbber,
.tab-icon-pending,
.tab-icon-image,
.tab-sharing-icon-overlay,
.tab-icon-overlay {
  margin-inline-end: 5.5px;
}

#TabsToolbar-customization-target {
  height: 100%;
  max-height: 100%;
  min-height: 100%;
  flex-direction: column;
}

/* bug 1670836 injection */
.tabbrowser-tab:not([pinned], [fadein]) {
  min-width: 0.1px;
  max-width: 0.1px;
  max-width: 0.1px;
  max-height: 0.1px;
}

#new-tab-button, #TabsToolbar-customization-target > .toolbarbutton-1  {
  display: inherit !important;
  appearance: inherit !important;
  border-radius: 5px;
  margin: 2px;
  padding: 3px;
  height: 25px;
}

#new-tab-button image {
  margin-left: 0;
}
#new-tab-button label, #TabsToolbar-customization-target > .toolbarbutton-1  {
  display: none;
}

.titlebar-spacer {
  display: none !important;
}

#new-tab-button:hover, #TabsToolbar-customization-target > .toolbarbutton-1:hover {
  background: var(--toolbarbutton-hover-background);
}

#new-tab-button:active, #TabsToolbar-customization-target > .toolbarbutton-1:active {
  background: var(--toolbarbutton-active-background);
}

#new-tab-button > .toolbarbutton-icon, #TabsToolbar-customization-target > .toolbarbutton-1 > .toolbarbutton-icon,
#TabsToolbar-customization-target > .toolbarbutton-1 > .toolbarbutton-badge-stack {
  background: none !important;
  background-color: unset !important;
  box-shadow: none !important;
}

#new-tab-button > .toolbarbutton-text, #TabsToolbar-customization-target > .toolbarbutton-1 > .toolbarbutton-text {
  background: none !important;
  background-color: unset !important;
  display: inherit !important;
}

#tabbrowser-tabs {
  border-inline-start: none;
  margin-inline-start: 0;
  padding-inline-start: 0;
  border-bottom: solid var(--toolbarseparator-color) 2px;
  border-top: solid var(--toolbarseparator-color) 2px;
  margin-bottom: 5px;
  margin-left: 3px;
  margin-right: 3px;
}

.tabbrowser-tab[first-visible-unpinned-tab] {
  margin-inline-start: 0px !important;
}

#tabbrowser-arrowscrollbox-periphery {
  display: none;
}

.tabbrowser-tab[fadein]:not([pinned]):not([style*="max-width"])[is] {
  max-width: -moz-available !important;
}

#TabsToolbar[multibar] .tabbrowser-tab {
  max-width: -moz-available !important;
}

#verticaltab-splitter {
  background: var(--toolbar-bgcolor);
  width: 8px;
}

#tabbrowser-arrowscrollbox::part(scrollbutton-up) {
  display: none;
}

:root[customizing] #browser {
  visibility: inherit !important;
  max-height: 300px !important;
}

#TabsToolbar-customization-target > toolbarpaletteitem:not([notransition])[place="panel"], toolbarpaletteitem:not([notransition])[place="toolbar"] {
  transition: max-width 150ms ease-in-out, min-width 150ms ease-in-out;
}

:root[customizing] #TabsToolbar .toolbarbutton-1 > .toolbarbutton-text {
  display: inherit !important;
}

